<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="com.alpharamen.customer.data.models.CartItemModel" />

        <variable
            name="listener"
            type="com.alpharamen.customer.view.listener.OnAdapterSelectedListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginBottom="10dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_cart_single_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="5dp"
            android:elevation="6dp"
            android:background="@color/colorWhite"
            android:onClick="@{()->listener.onAdapterSelected(item)}"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:id="@+id/view_cart_single_item"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.alpharamen.customer.view.customview.WacTextView
                    android:id="@+id/wac_text_view_hotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="19dp"
                    android:gravity="center_vertical"
                    android:text="@{item.itenName}"
                    android:textColor="#433E3E"
                    android:textSize="14sp"
                    app:customFontThickness="bold"
                    app:layout_constraintStart_toEndOf="@+id/image_view_cart_item"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/chicken_miso" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/image_view_cart_item"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="35dp"
                    android:elevation="6dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/login_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/view_cart_single_item"
                    app:layout_constraintTop_toTopOf="parent"
                    app:riv_corner_radius="10dp" />

                <com.alpharamen.customer.view.customview.WacTextView
                    android:id="@+id/wacTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@{item.restName}"
                    android:textColor="@color/cart_item_gray_color"
                    android:textSize="10sp"
                    tools:text="@string/hub_name"
                    app:customFontThickness="bold"
                    app:layout_constraintStart_toStartOf="@+id/wac_text_view_hotel"
                    app:layout_constraintTop_toBottomOf="@+id/wac_text_view_hotel" />

                <com.alpharamen.customer.view.customview.WacTextView
                    android:id="@+id/wacTextView_rupees"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/rupees"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:customFontThickness="bold"
                    tools:text="@string/rupees"
                    app:layout_constraintStart_toStartOf="@+id/wacTextView"
                    app:layout_constraintTop_toBottomOf="@+id/wacTextView" />

                <com.alpharamen.customer.view.customview.WacTextView
                    android:id="@+id/wacTextView_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@{item.rate}"
                    android:textColor="@color/colorBlack"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    app:customFontThickness="bold"
                    tools:text="@string/rate"
                   app:layout_constraintStart_toEndOf="@+id/wacTextView_rupees"
                    app:layout_constraintTop_toBottomOf="@+id/wacTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/view_quantity"
            android:layout_width="40dp"
            android:layout_height="80dp"
            android:layout_marginStart="13dp"
            android:background="@drawable/background_raddius_4dp"
            android:elevation="6dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/card_view_cart_single_item"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_view_cart_single_item">

            <TextView
                android:id="@+id/text_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/add"
                android:textColor="@color/project_red"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@{String.valueOf(item.no)}"
                android:textColor="@color/colorBlack"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_subtract"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/subtract"
                android:textColor="@color/colorBlack"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imageView_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/circular_background_login"
            android:elevation="6dp"
            android:onClick="@{()->listener.onAdapterString(String.valueOf(item.id))}"
            android:padding="10dp"
            android:src="@drawable/ic_delete_white"
            app:layout_constraintBottom_toBottomOf="@+id/card_view_cart_single_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_view_cart_single_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
